--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sakura-bot",
+  "name": "Queen-mini-bot",
   "description": "Customizable WhatsApp Bot",
   "repository": "https://github.com/FG98F/dylux-fg",
   "logo": "https://i.ibb.co/dG6rm49/fg-logo.png",
